# rust-microservice-in-k8s

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml  kubernetes.yaml
api/: build.rs
api/proto/: echo.proto
api/src/pb/: echo.rs  mod.rs
doc/: architecture.typ
gateway/: Cargo.toml
gateway/src/: main.rs
service1/: Cargo.toml
service1/src/: main.rs
service2/: Cargo.toml
service2/src/: main.rs
